--- a/documentation.adoc
+++ b/documentation.adoc
@@ -39,3 +39,19 @@ Artikel mit ihren Namen, den Mietkosten und einem Link zur entsprechenden Detail
 des einzelnen Artikels darstellt, und die eben genannte Detailansicht, die alle
 Variablen des Artikels außer der `articleID` darstellt, unter `localhost:8080/article/{id}`,
 wobei {id} durch die `articleID` des Artikels ersetzt wird.
+
+### Ausleihe
+Eine Ausleihe ist eine eigene Entität namens 'Lending' diese beinhaltet die 'lendingId',
+die 'lendingPersonID' für die ausleihende Person und die 'articleID', um die Artikel
+in der Datenbank zu finden, weil diese die id von der Person besitzt die den Artikel anbietet.
+Anfangs bekommt man eine Anfrage von der Artikelübersicht, und wird auf '/lendingRequest' weitergeleitet.
+Dort kann man das 'startDate' und das 'endDate' eingeben wie lange die Ausleihe gehen soll.
+Ebenfalls kann man einen 'requestComment' machen um sich für den Artikel zu bewerben.
+Dann wird eine neue Entität angelegt, die 'Request' heißt. Diese speichert alle wichtigen Daten
+um der Person die den Artikel anbietet eine Nachricht auf '/overview/{id}' zeigt, ob
+sie die Anfrage auf den Artikel von der Person annehmen will.
+Auf '/overviewLendings/{id}' kann sich die eingeloggte Person Ihre ausgeliehene Artikel anschauen,
+hier wird eine Warnung ausgegeben falls die jetzige Zeit weiter ist als das 'endDate',
+hier kann die Person auch auf 'return' drücken, damit der ausgeliehene Artikel
+wieder verfügbar wird und auf '/overviewBorrows/{id}' kann sich die eingeloggte
+ Person Ihre angebotenen Artikel anschauen. 
