writtes a few lines in the Documentation in order to explain the Features

--- a/documentation.adoc
+++ b/documentation.adoc
@@ -39,3 +39,11 @@ Artikel mit ihren Namen, den Mietkosten und einem Link zur entsprechenden Detail
 des einzelnen Artikels darstellt, und die eben genannte Detailansicht, die alle
 Variablen des Artikels außer der `articleID` darstellt, unter `localhost:8080/article/{id}`,
 wobei {id} durch die `articleID` des Artikels ersetzt wird.
+Als erweiterte Features wurden dann noch ein paar Grundlagen implementiert. Darunter fällt das Editieren von Artikeln,
+auch das Löschen. Zurzeit noch ohne ein Permissions-System, da das erst mit dem Springboot-Security später hinzugefügt wird.
+Desweiteren haben wir uns einem anspruchsvolleren Feature gewidmet. Die Implementierung von Bildern. Diese werden beim Erstellen
+dem Artikel hinzugefügt und können weder bearbeitet, noch gelöscht werden. Die Bilder sieht man dann bei der Artikelübersicht.
+Um das zu vollbringen haben wir das Bild erstmal als File dem Artikel als nicht Persistent hinzugefügt, dann die wichtigen Informationen
+aus dem `File` ausgelesen und in einer `Image` Klasse dafür gespeichert. Dem Artikel weisen wir in einer OnetoOne Beziehung ein Image zu.
+In der Artikelansicht wird dann ein spezieller Imagecontroller aufgerufen, der die Bytes des Bildes zurückgibt. 
+So haben wir die Bilder dann implementiert.
