write an documentation about the conflict

--- a/documentation.adoc
+++ b/documentation.adoc
@@ -124,3 +124,8 @@ Die Nachrichten die angezeigt werden, werden durch eine Filtermethode gefiltert 
 Tests wurden geschrieben für die Filtermethode die diverse Beziehungen von den Chatnachrichten testet (zb: onetoone, onetotwo, etc..). 
 
 
+### Konflikt
+Es gibt zwei Möglichkeiten einen Konflikt zu erzeugen, der Benutzter welcher sich ein Gerät ausleiht kann während der Leih-Periode einen Konflikt erstellen und der Verleiher kann bei der Rückgabe falls der rückgegebenen Artikel beschädigt ist ebenfalls einen Konflikt erstellen.
+Wenn der Leiher zurückgeben will bekommt der Verleiher sofort nach erfolgreichem Login die Möglichkeit den Artikel anzunehmen oder einen Konflikt zu erstellen.
+Bei dem Erstellen eines Konfliktes wird eine Email mit der Nachricht an alle RhinoShare-Admins gesendet welche dann über den Konflikt entscheiden können. Entscheidet sich der Admin der bei einem Fall für den Verleiher so kann dieser die Kaution behalten, enscheidet sich der Admin für den Leiher so erhält dieser seine Kaution zurück.
+
