--- a/documentation.adoc
+++ b/documentation.adoc
@@ -12,7 +12,8 @@ nochmal zusammenfassen:
 - Tabs anstelle von 4 Leerzeichen
 - { hinter die Methode und nicht in eine neue Zeile
 - Variablennamen: fooBar
-- Methodennamen: FooBar
+- Methodennamen: fooBar
+- Konstanten: CON_VAR
 
 Zusätzlich wird zu erst eine funktionierende Datei in den `master`-Branch gepushed,
 von dem alle zum arbeiten eigene Branches erstellen. Gemerged wird erst, sobald das
@@ -23,6 +24,11 @@ Unser Plan sieht es vor, 3 Self-contained-systems zu erstellen, die sich um die
 Verwaltung der Daten von Benutzern, Artikeln und Ausleihen kümmern und jeweils ihr
 eigenes Mapping ausführen. Im Hintergrund soll dazu eine `Postgres`-Datenbank
 laufen, auf die alle drei Systeme Zugriff haben und die die Daten speichert.
+
+## Realität
+Unsere erste Planung ließen wir am Ende von Woche 2 fallen und stellten auf eine
+MVC-Architektur um, die die Kommunikation zwischen den Klassen erleichtert. Zudem
+haben wir auf eine `mariaDB`-Datenbank gewechselt.
 
 ## Dokumentation
 ### Artikel
@@ -58,95 +64,109 @@ und nach dem Vorkommen des Queries in den Namen und Beschreibungen der Artikel s
 Alle auf diese Weise gefundenen Artikel werden dann auf einer Übersichtsseite ausgegeben.
 Die von uns implementierte Suche ist zudem Case-insensitive.
 
-Die Artikel sind so erstellt, dass der User, dem die Items gehören, die Möglichkeit hat
-den Artikel zu löschen oder zu bearbeiten. Durch die Änderungen der Aufhabe hat er da auch
-die Möglichkeit den Kaufpreis und die Kauffunktion zu aktivieren (Was er optional auch beim Erstellen des
-Artikels machen kann). Ein User, dem ein Item nicht gehört, kann dieses statt dessen Miet (Sofern es verfügbar ist)
-oder Kaufen, wenn dies Freigeschaltet ist.
+Die Artikel sind so erstellt, dass der User, dem der Artikel gehört, die Möglichkeit
+hat, den Artikel zu löschen oder zu bearbeiten. Durch die Änderungen der Aufgabe
+hat er da auch die Möglichkeit, den Kaufpreis zu setzen und die Kauffunktion zu aktivieren
+(Was er optional auch beim Einstellen des Artikels machen kann). Ein User, dem ein
+Artikel nicht gehört, kann dieses statt dessen Ausleihen (sofern er verfügbar ist)
+oder Kaufen, wenn dies freigeschaltet ist.
 
-In der Artikelübersicht sieht man das Artikelbild oder ein Standartbild, sowie ein Preis und ein Standort (Als Ort).
-Durch einen Klick auf den Artikel kommt man auf die oben erwähnte spezifische Website für das Artikel.
-
+In der Artikelübersicht sieht man das Artikelbild oder ein Standardbild, sowie einen
+Preis und einen Standort (Stadt). Durch einen Klick auf den Artikel kommt man auf
+die oben erwähnte Detailansicht des Artikels.
 
 ### User
 Man kann sich einloggen, indem man seinen Username in das dafür vorgesehen Textfeld
-schreibt und den SignIn Button betätigt. Die einzige Vorraussetzung dafür ist,
-dass bereits ein User mit diesem Usernamen in der Datenbank vorhanden ist.
-Ansonsten kann man den SignUp Button betätigen, dann wird man weitergeleitet zu der SignIn Seite.
-Hier kann man nun einen ganz neuen User erstellen, indem man alle Textfelder
-mit korrekten Eingaben ausfüllt un den entsprechenden Button betätigt.
-Nach dem Einloggen bzw. dem Registrieren, kann man den ProfileOverview Button betätigen,
-dann wird man weitergeleitet auf eine Seite wo einem die Eigenen Profildaten in Textfeldern angezeigt werden.
-In diese Textfelder kann man auch schreiben um seine Profil zu verändern.
-Um das Profil zu verändern füllt man einfach die Felder aus, bei welchen man die Daten
-verändern will und betätigt den ApplyChanges Button, nun wurde das Profil in der datenbank aktualisiert.
-##Testing
-Wir haben viele Tests geschrieben und haben eine Overallline coverage von über 85% erreicht,
-Es werden alle Methoden in dem Controller getestet, wir erreichen keine 100% coverage, weil wir
-das Repository gemockt haben und in der Methode ins Repository gespeichert wird und in der gleichen methode
- wieder ausgelesen wenn wir die Methode für diesen Username mocken wird er schon ind er vorherigen methode abgefangen.
+schreibt und den `Einloggen` Button betätigt. Die einzige Vorraussetzung dafür ist,
+dass bereits ein User mit diesem Usernamen und Passwort in der Datenbank vorhanden ist.
+Ansonsten kann man den `Registrieren` Button betätigen, dann wird man zur Registrieren-Seite
+weitergeleitet. Hier kann man nun einen ganz neuen User erstellen, indem man alle Textfelder
+mit korrekten Eingaben ausfüllt und den entsprechenden Button betätigt. Nach dem Einloggen
+bzw. Registrieren, kann man den `Profil Bearbeiten` Button betätigen, um auf eine Seite
+weitergeleitet zu werden, auf der man seine Profilinformationen einsehen und bearbeiten kann.
+Mit einem Klick auf `Aktualisieren` werden die Änderungen in die Datenbank aufgenommen.
+
+### Testing (User)
+Wir haben viele Tests geschrieben und haben eine Overall line Coverage von über 85% erreicht.
+Es werden alle Methoden in den Controllern getestet. Wir erreichen keine 100% Coverage, weil wir
+das Repository gemockt haben und in der Methode ins Repository gespeichert wird und in der gleichen Methode
+wieder ausgelesen wenn wir die Methode für diesen Username mocken wird er schon
+in der vorherigen Methode abgefangen.
 
 ### Ausleihe
-Eine Ausleihe ist eine eigene Entität namens 'Lending' diese beinhaltet die 'lendingId',
-die 'lendingPerson' für die ausleihende Person und die 'lendedArticle', um die Artikel
-in der Datenbank zu finden, weil diese die id von der ownerPerson besitzt die den Artikel anbietet.
-Anfangs bekommt man eine Anfrage von der Artikelübersicht, und wird auf '/lendingRequest' weitergeleitet.
-Hier kann ebenfalls auf '/saleRequest' weitergeleitet werden. Bei beiden wird als Pathvariable die id
+
+Eine Ausleihe ist eine eigene Entität namens `Lending`, diese beinhaltet die `lendingId`,
+die `lendingPerson` für die ausleihende Person und die `lendedArticle`, um die Artikel
+in der Datenbank zu finden, weil diese die `id` von der `ownerPerson` besitzt, die den Artikel anbietet.
+Anfangs bekommt man eine Anfrage von der Artikelübersicht, und wird auf `/lendingRequest` weitergeleitet.
+Hier kann ebenfalls auf `/saleRequest` weitergeleitet werden. Bei beiden wird als Pathvariable die `id`
 von dem Artikel mitgeben. Bei einem Verkauf wird nur nach einem Kommentar gefragt und dieser wird dem
-Besitzer des Artikels auf der 'overview' Seite angezeigt. Wenn der request abgeschickt wird, wird man auf die 'inquiry'
+Besitzer des Artikels auf der `overview` Seite angezeigt. Wenn der Request abgeschickt wird, wird man auf die `inquiry`
 Seite weitergeleitet, wo man informiert wird, dass die Anfrage bearbeitet wird.
-Für die Ausleihe muss man das 'startDate' und das 'endDate' eingeben wie lange die Ausleihe gehen soll.
-Ebenfalls kann man einen 'requestComment' machen um sich für den Artikel zu bewerben.
-Bei beiden Fällen wird eine neue Entität 'Lending' angelegt und beim akzeptieren wird die Reservation im 'Lending' gespeichert.
-diese werden als 'isRequest'markiert und dem Besitzer in der 'overview' zum entscheiden angezeigt. .In beiden Fällen wird
-der Artikel auf 'isAvailable' false gesetzt. Falls der Besitzer sich dagegen entscheidet
-den Artikel zu verkaufen, wird ein boolean 'isDummy' auf true gesetzt, damit der kaufenden oder
-leihenden Person auf der 'overview' eine Information angezeigt wird, dass diese Anfrage abgelehnt wurde.
-Wenn die anfragende Person auf den Bestätigen Button klickt, wird das 'Lending' aus der Datenbank gelöscht.
-Wenn die Verkaufanfrage bestätigt wird, wird eine 'Transaction' zwischen dem Käufer und dem
+
+Für die Ausleihe muss man das `startDate` und das `endDate` eingeben wie lange die Ausleihe gehen soll.
+Ebenfalls kann man einen `requestComment` eingeben um sich für den Artikel zu bewerben.
+Bei beiden Fällen wird eine neue Entität `Lending` angelegt und beim akzeptieren wird die Reservation im `Lending` gespeichert.
+diese werden als `isRequest` markiert und dem Besitzer in der `overview` zum entscheiden angezeigt. In beiden Fällen wird
+der Artikel auf `isAvailable == false` gesetzt. Falls der Besitzer sich dagegen entscheidet,
+den Artikel zu verkaufen, wird ein boolean `isDummy` auf `true` gesetzt, damit der kaufenden oder
+leihenden Person auf der `overview` eine Information angezeigt wird, dass diese Anfrage abgelehnt wurde.
+Wenn die anfragende Person auf den `Bestätigen` Button klickt, wird das `Lending` aus der Datenbank gelöscht.
+Wenn die Verkaufanfrage bestätigt wird, wird eine `Transaction` zwischen dem Käufer und dem
 Bestizer erzeugt und in der Datenbank gespeichert. Dabei wird der Artikel rausgelöscht und ein DummyArtikel
-für die Transaktionen angelegt. Wird ein Leihanfrage von dem Besitzer angenommen in der 'overview' Seite,
-dann wird der Leihenden Person die Ausleihe in 'OverviewLending' angezeigt.
+für die Transaktionen angelegt. Wird ein Leihanfrage von dem Besitzer angenommen in der `overview` Seite,
+dann wird der Leihenden Person die Ausleihe in `OverviewLending` angezeigt.
+
 Dort kann Sie einen Konflikt erzeugen oder den Artikel zurückgeben. Wenn der Artikel zurückgegeben wird,
-wird ein Flag 'isReturn' auf true gesetzt und der Bestizer von dem Artikel wird auf der 'overview' Seite
+wird ein Flag `isReturn` auf `true` gesetzt und der Besitzer von dem Artikel wird auf der `overview` Seite
 eine Anfrage angezeigt ob er den Artikel zurücknehmen will oder den Zustand des Artikels nicht für gut genug empfindet.
-Beim akzeptieren des Artikels, wird der Betrag ausgerechnet und in eine 'Transaction' gespeichert und die
+Beim akzeptieren des Artikels, wird der Betrag ausgerechnet und in eine `Transaction` gespeichert und die
 Reservation die anfangs angelegt wurde wird gelöscht und danach wird diese auch über Propay aufgelöst.
 Beim ablehnen wird ein Konflikt erzeugt und diese kann von den Admins erledigt werden.
-Im 'OverviewLending' wird auch ausgerechnet wie lange man den Artikel noch ausleihen darf oder zeigt
-einen Warning Text an wenn der Artikel zu lange ausgeliehen ist. In der 'overview' wird dann
-ein pop-up geöffnet wenn ein Artikel zu lange ausgeliehen ist. Auf der Seite 'PropayOverview' Wird
-das Guthaben des Accounts angezeigt mit allen 'Reservations' und dort ist ein Feld zum aufladen des Kontos.
-Falls Propay nicht geöffnet sein sollte, wird man auf eine FehlerSeite geleitet, die sagt das "Propay derzeit nicht erreichbar ist".
-Unter 'conflictPage' Kann man sich alle Ausleihen angucken an denen man beteiligt ist und
+Im `OverviewLending` wird auch ausgerechnet wie lange man den Artikel noch ausleihen darf oder zeigt
+einen Warning Text an wenn der Artikel zu lange ausgeliehen ist. In der `overview` wird dann
+ein pop-up geöffnet wenn ein Artikel zu lange ausgeliehen ist. Auf der Seite `PropayOverview` Wird
+das Guthaben des Accounts angezeigt mit allen `Reservations` und dort ist ein Feld zum aufladen des Kontos.
+
+Falls Propay nicht geöffnet sein sollte, wird man auf eine Fehlerseite geleitet, die sagt das "Propay derzeit nicht erreichbar ist".
+Unter `conflictPage` Kann man sich alle Ausleihen angucken an denen man beteiligt ist und
 diese derzeit einen Konflikt hat. Falls man zu wenig Geld hat, während man sich etwas ausleiht
-oder bezahlt, wird man auf die 'povertyPage' weitergeleitet.
-Zum befüllen der Html Seiten benutzen wir RepresentationKlassen, die Listen von 'lendings',
-'requests' oder allen anderen benötigten Listen.
-In der Klasse 'ApiProccessor' haben wir alle Methoden die mit Propay kommunizieren oder kontrollieren ob
+oder bezahlt, wird man auf die `povertyPage` weitergeleitet.
+Zum befüllen der Html Seiten benutzen wir `Representation`-Klassen, die Listen von `lendings`,
+`requests` oder allen anderen benötigten Listen.
+In der Klasse `ApiProccessor` haben wir alle Methoden die mit Propay kommunizieren oder kontrollieren ob
 genügend Geld vorhanden ist auf den jeweiligen Propay-konten.
-In der 'PostProccessor' werden alle Entscheidungen richtig vernetzt und alle Entitäten werden dort rausgelöscht
+In der `PostProccessor` werden alle Entscheidungen richtig vernetzt und alle Entitäten werden dort rausgelöscht
 und angelegt.
 
- ### Änderungen vom Marketing
- Durch die Änderungen durch die Marketingabteilung war nicht allzuviel zutun. Wir haben dem Artikel
- zwei Attribute hinzugefügt. Einen Boolean, der angibt ob das Produkt zum Verkauf ist, sowie aber auch
- ein Kaufpreis. Dieser ist Standartmäßig auf 0, was aber nicht relevant ist, da der Preis auch nicht angezeigt wird,
- wenn der Artikel als Nicht-verkaufbar eingestellt wird.
- Des weiteren haben wir die Edit Funktion der Artikel so abgeändert, dass man jetzt im Nachhinein den Verkaufshaken noch
- einsetzen kann, sowie auch den Preis ändern darf.
- Dazu kam dann ein Button für verkaufsbereite Artikel, der ein extra Lending Mapping aufruft für den Verkauf.
- Das Mapping läuft Analog zum Ausleihprozess. Die einzige Änderung ist, dass wir das Artikel dann erst kopieren mit den
- wichtigen Attributen, dann wird das original aus der Datenbank gelöscht. Die Kope ohne persönliche Daten behalten wir als Inaktiv
- für unsere Lending / Verkaufshistorie.
+### Änderungen vom Marketing
+Durch die Änderungen durch die Marketingabteilung war nicht allzuviel zutun. Wir haben dem Artikel
+zwei Attribute hinzugefügt. Einen Boolean, der angibt ob das Produkt zum Verkauf ist, sowie aber auch
+ein Kaufpreis. Dieser ist Standartmäßig auf 0, was aber nicht relevant ist, da der Preis auch nicht angezeigt wird,
+wenn der Artikel als Nicht-verkaufbar eingestellt wird.
+Des weiteren haben wir die Edit Funktion der Artikel so abgeändert, dass man jetzt im Nachhinein den Verkaufshaken noch
+einsetzen kann, sowie auch den Preis ändern darf.
+Dazu kam dann ein Button für verkaufsbereite Artikel, der ein extra Lending Mapping aufruft für den Verkauf.
+Das Mapping läuft Analog zum Ausleihprozess. Die einzige Änderung ist, dass wir das Artikel dann erst kopieren mit den
+wichtigen Attributen, dann wird das original aus der Datenbank gelöscht. Die Kope ohne persönliche Daten behalten wir als Inaktiv
+für unsere `Lending/Verkaufshistorie`.
 
 ### Chat
-Der Chat ist erreichbar über "/chat". Dann öffnet sich eine Seite mit einen Nachrichtenverlauf von gesendeten- und emfangenen Nachrichten. Diese Übersicht ist für jeden Nutzer anders, da der Chat ein eins-zu-eins Chat ist.
-
-Um Nachrichten zu verschicken geht man auf einem Artikel, und klickt dann auf die "Nachricht senden an" Schaltfläche. Der Emfänger und der Sender werden automatisch festgelegt sodass der Sender nur den Inhalt der Nachricht schreiben muss.
-
-Die Nachrichten die angezeigt werden, werden durch eine Filtermethode gefiltert (FROM, TO) die durch die Nachrichtendatanbank streamt. Auf der Übersichtsseite hat der Nutzer die Möglichkeit auf Nachrichten zu antworten oder zu löschen. Beide Möglichkeiten leiten auf je eine eigene Webseite ("/deletechat/{ID}", "/answerchat/{ID}"), welche dann die betreffende Nachricht finden die beantwortet, oder gelöscht, werden soll. Falls eine Nachricht gelöscht wird, wird jedoch die Nachricht für beide Benutzer gelöscht, da die Nachrichten sich eine Datenbank teilen. Beim beantworten der Nachricht wird automatisch der Sender und Empfänger festgelegt sodass der Benutzer nur noch den Inhalt der Nachricht schreiben muss.
-
+Der Chat ist erreichbar über `/messages`. Dies eine Seite mit dem Nachrichtenverlauf
+aller Nachrichten. Diese Übersicht ist für jeden Nutzer anders,
+da der Chat ein Eins-zu-Eins Chat ist. Um Nachrichten zu verschicken geht man auf
+einen Artikel und klickt dann auf die "Nachricht senden" Schaltfläche. Der Emfänger
+und der Sender werden automatisch festgelegt sodass der Sender nur den Inhalt der
+Nachricht schreiben muss.
+Die Nachrichten, die angezeigt werden, werden durch eine Filtermethode gefiltert (FROM, TO)
+die durch die Nachrichtendatenbank streamt. Auf der Übersichtsseite hat der Nutzer die
+Möglichkeit, auf Nachrichten zu antworten oder diese zu löschen. Beide Möglichkeiten
+leiten auf je eine eigene Webseite (`/messages/delete/{ID}`, `/messages/answer/{ID}`),
+welche dann die betreffende Nachricht findet die beantwortet oder gelöscht werden
+soll. Falls eine Nachricht gelöscht wird, wird die Nachricht für beide Benutzer
+gelöscht, da die Nachrichten sich eine Datenbank teilen. Beim beantworten der Nachricht wird
+automatisch der Sender und Empfänger festgelegt, sodass der Benutzer nur noch den
+Inhalt der Nachricht schreiben muss.
 
 ### Konflikt
 Es gibt zwei Möglichkeiten einen Konflikt zu erzeugen, der Benutzter welcher sich ein Gerät ausleiht kann während der Leih-Periode einen Konflikt erstellen und der Verleiher kann bei der Rückgabe falls der rückgegebenen Artikel beschädigt ist ebenfalls einen Konflikt erstellen.
